Renaming: spring-boot-jsonb-app -> spring-boot-3-jsonb-app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       POSTGRES_USER: articles-user
       POSTGRES_PASSWORD: articles-password
 
-  spring-boot-jsonb-app:
-    image: spring-boot-jsonb-app
+  spring-boot-3-jsonb-app:
+    image: spring-boot-3-jsonb-app
     restart: always
     ports:
       - "9080:9080"
