--- a/pom.xml
+++ b/pom.xml
@@ -112,11 +112,11 @@
 		</dependency>
 
 		<!-- JSONB types -->
-		<dependency>
-			<groupId>com.vladmihalcea</groupId>
-			<artifactId>hibernate-types-55</artifactId>
-			<version>2.21.1</version>
-		</dependency>
+    <dependency>
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-60</artifactId>
+			<version>3.9.0</version>
+    </dependency>
 
 		<!-- Test dependencies -->
 		<dependency>
